manifests/trouwenopfilm-nl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trouwenopfilm-nl
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
  selector:
    app: trouwenopfilm-nl
