manifests/trouwenopfilm-nl/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trouwenopfilm-nl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: trouwenopfilm.nl
      http:
        paths:
          - path: /
            backend:
              serviceName: trouwenopfilm-nl
              servicePort: http
    - host: www.trouwenopfilm.nl
      http:
        paths:
          - path: /
            backend:
              serviceName: trouwenopfilm-nl
              servicePort: http
  tls:
    - secretName: trouwenopfilm-nl-tls 
      hosts:
        - 'trouwenopfilm.nl'
        - 'www.trouwenopfilm.nl'
